coreapp/src/main/java/org/example/calendar/javaccparser/calparser.jj
PARSER_BEGIN(MainParser)

package org.example.calendar.javaccparser;
import java.io.*;
import java.time.LocalTime;
import java.time.LocalDate;
import java.time.Duration;
import java.util.List;
import java.util.ArrayList;
import org.example.calendar.calendarstructs.*;


public class MainParser
{
    public static void parse(String filename) throws IOException, ParseException
    {
        MainParser p = new MainParser(new FileReader(filename));
        p.File();
    }
}

PARSER_END(MainParser)

TOKEN :
{
    < EVENT: "event " >
  | < PLUGIN: "plugin" >
  | < SCRIPT: "script" >
  | < DATE: "2" ("0"|"1"|"2"|"3"|"4"|"5"|"6"|"7"|"8"|"9")
             (["0"-"9"])(["0"-"9"]) "-" (["0"-"1"])(["0"-"9"]) "-" (["0"-"3"])(["0"-"9"]) >
  | < TIME: (["0"-"2"])(["0"-"9"]) ":" (["0"-"5"])(["0"-"9"]) ":" (["0"-"5"])(["0"-"9"]) >
  | < DURATION: (["0"-"9"])+ >
  | < ALL_DAY: "all-day" >
  | < STRING: "'" (~["'"])* "'" >
  | < CLASS_NAME: (<JAVA_ID> ".")* <JAVA_ID> >
}

TOKEN :
{
    < JAVA_ID: ["a"-"z","A"-"Z","_","$"] (["a"-"z","A"-"Z","0"-"9","_","$"])* >
}

List<CalendarEvent> File() :
{
    List<CalendarEvent> events = new ArrayList<>();
    CalendarEvent event;
}
{
    (
        event=Event() { System.out.println(event); events.add(event); }
    |
        Plugin()
    |
        Script()
    )*
    <EOF>
    { return events; }
}

CalendarEvent Event() :
{
    LocalDate eventDate;
    String eventTitle;
    LocalTime eventTime;
    Duration eventDuration;
    CalendarEvent event;
}
{
    <EVENT> eventDate=Date()
    (
        eventTime=Time() eventDuration=Duration() <STRING> eventTitle=StringLiteral()
        {
            event = new TimeOfDayEvent(eventDate, eventTitle, eventTime, eventDuration);
        }
    |
        <ALL_DAY> <STRING> eventTitle=StringLiteral()
        {
            event = new AllDayEvent(eventDate, eventTitle);
        }
    )
    { return event; }
}

LocalDate Date() :
{
    Token dateToken;
}
{
    dateToken = <DATE>
    {
        return LocalDate.parse(dateToken.image);
    }
}

LocalTime Time() :
{
    Token timeToken;
}
{
    timeToken = <TIME>
    {
        return LocalTime.parse(timeToken.image);
    }
}

Duration Duration() :
{
    Token durationToken;
}
{
    durationToken = <DURATION>
    {
        return Duration.ofMinutes(Long.parseLong(durationToken.image));
    }
}

String StringLiteral() :
{
    Token t;
}
{
    t = <STRING>
    {
        return t.image.substring(1, t.image.length() - 1);
    }
}

void Plugin() :
{}
{
    <PLUGIN> <CLASS_NAME> "{" Arguments() "}"
}

void Arguments() :
{}
{
    ( <JAVA_ID> ":" <STRING> ("," <JAVA_ID> ":" <STRING> )* )?
}

void Script() :
{}
{
    <SCRIPT> <STRING>
}

SKIP : { " " | "\n" | "\r" | "\t" }
