coreapp/src/main/java/org/example/calendar/javaccparser/MainParser.java
/* MainParser.java */
/* Generated By:JavaCC: Do not edit this line. MainParser.java */
package org.example.calendar.javaccparser;
import java.io.*;
import java.time.LocalTime;
import java.time.LocalDate;
import java.time.Duration;
import java.util.List;
import java.util.ArrayList;
import org.example.calendar.calendarstructs.*;


public class MainParser implements MainParserConstants {
    public static void parse(String filename) throws IOException, ParseException
    {
        MainParser p = new MainParser(new FileReader(filename));
        p.File();
    }

  static final public List<CalendarEvent> File() throws ParseException {List<CalendarEvent> events = new ArrayList<>();
    CalendarEvent event;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EVENT:
      case PLUGIN:
      case SCRIPT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EVENT:{
        event = Event();
System.out.println(event); events.add(event);
        break;
        }
      case PLUGIN:{
        Plugin();
        break;
        }
      case SCRIPT:{
        Script();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
{if ("" != null) return events;}
    throw new Error("Missing return statement in function");
}

  static final public CalendarEvent Event() throws ParseException {LocalDate eventDate;
    String eventTitle;
    LocalTime eventTime;
    Duration eventDuration;
    CalendarEvent event;
    jj_consume_token(EVENT);
    eventDate = Date();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIME:{
      eventTime = Time();
      eventDuration = Duration();
      jj_consume_token(STRING);
      eventTitle = StringLiteral();
event = new TimeOfDayEvent(eventDate, eventTitle, eventTime, eventDuration);
      break;
      }
    case ALL_DAY:{
      jj_consume_token(ALL_DAY);
      jj_consume_token(STRING);
      eventTitle = StringLiteral();
event = new AllDayEvent(eventDate, eventTitle);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return event;}
    throw new Error("Missing return statement in function");
}

  static final public LocalDate Date() throws ParseException {Token dateToken;
    dateToken = jj_consume_token(DATE);
{if ("" != null) return LocalDate.parse(dateToken.image);}
    throw new Error("Missing return statement in function");
}

  static final public LocalTime Time() throws ParseException {Token timeToken;
    timeToken = jj_consume_token(TIME);
{if ("" != null) return LocalTime.parse(timeToken.image);}
    throw new Error("Missing return statement in function");
}

  static final public Duration Duration() throws ParseException {Token durationToken;
    durationToken = jj_consume_token(DURATION);
{if ("" != null) return Duration.ofMinutes(Long.parseLong(durationToken.image));}
    throw new Error("Missing return statement in function");
}

  static final public String StringLiteral() throws ParseException {Token t;
    t = jj_consume_token(STRING);
{if ("" != null) return t.image.substring(1, t.image.length() - 1);}
    throw new Error("Missing return statement in function");
}

  static final public void Plugin() throws ParseException {
    jj_consume_token(PLUGIN);
    jj_consume_token(CLASS_NAME);
    jj_consume_token(11);
    Arguments();
    jj_consume_token(12);
}

  static final public void Arguments() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case JAVA_ID:{
      jj_consume_token(JAVA_ID);
      jj_consume_token(13);
      jj_consume_token(STRING);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 14:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(14);
        jj_consume_token(JAVA_ID);
        jj_consume_token(13);
        jj_consume_token(STRING);
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
}

  static final public void Script() throws ParseException {
    jj_consume_token(SCRIPT);
    jj_consume_token(STRING);
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MainParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0xe,0xe,0xa0,0x4000,0x400,};
	}

  /** Constructor with InputStream. */
  public MainParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MainParser(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new MainParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MainParser(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new MainParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new MainParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MainParser(MainParserTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MainParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[19];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 5; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 19; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
